test/end-to-end/runnable/fail.crow
main void()
	foo

foo void()
	bar

bar void()
	throw "FOO" error
