test/end-to-end/compile-errors/extern-invalid-name.crow
main void() foo extern
	if extern bar
		()
